# hiero-did-sdk-rs

./: .env.local  .git-blame-ignore-revs  ARCHITECTURE.md  Cargo.toml  README.md  arciture.md  rustfmt.toml
.github/workflows/: ci.yml
anoncreds/: Cargo.toml
anoncreds/src/: lib.rs  registry.rs  types.rs  utils.rs
anoncreds/tests/: integration_anoncreds.rs
client/: Cargo.toml
client/src/: configuration.rs  lib.rs  service.rs
client/tests/: client_service_integration.rs
core/: Cargo.toml
core/src/: did.rs  did_url.rs  document.rs  error.rs  keys.rs  lib.rs  representation.rs  signer.rs
docs/: README.md  api-reference.md  create-did.md  csm.md  dereference-did.md  testing.md
hcs/: Cargo.toml
hcs/src/: client.rs  lib.rs  service.rs  topic.rs
hcs/src/cache/: mod.rs
hcs/src/hcs/: file.rs  message.rs  mod.rs  signing.rs  topic.rs
hcs/src/shared/: awaiter.rs  mod.rs
hcs/tests/: integration_hcs.rs
lifecycle/: ARCHITECTURE.md  Cargo.toml
lifecycle/src/: builder.rs  lib.rs  message.rs  runner.rs  state.rs  step.rs  types.rs
lifecycle/tests/: lifecycle.rs
messages/: Cargo.toml
messages/src/: did_add_service.rs  did_add_verification_method.rs  did_deactivate.rs  did_owner.rs  did_remove_service.rs  did_remove_verification_method.rs  did_update.rs  envelope.rs  events.rs  lib.rs
method/: Cargo.toml
method/src/: lib.rs  parser.rs  validator.rs
registrar/: Cargo.toml
registrar/src/: create.rs  create_csm.rs  csm.rs  deactivate.rs  deactivate_csm.rs  lib.rs  update.rs  update_csm.rs
registrar/tests/: csm_integration.rs  integration_test.rs
resolver/: Cargo.toml
resolver/src/: builder.rs  dereference.rs  grpc_reader.rs  hcs_topic_reader.rs  lib.rs  mirror.rs  representation.rs  resolve.rs  topic_reader.rs
resolver/tests/: cbor_integration.rs  grpc_integration.rs
scratch/: Cargo.toml
scratch/src/: main.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/tests/: integration_anoncreds.rs  reexports.rs
signer/: Cargo.toml
signer/src/: internal.rs  lib.rs  vault.rs  vault_api.rs  vault_config.rs
utils/: Cargo.toml
utils/src/tests/: mod.rs  polling.rs
