[workspace]
members = [
    "core",
    "messages",
    "hcs",
    "method",
    "registrar",
    "resolver",
    "signer",
    "sdk",
    "client",
    "anoncreds",
    "scratch",
    "lifecycle", 
    "utils",
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22.1"
bs58 = "0.5.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
hiero-sdk = { version = "0.45.0", features = ["serde"] }
futures-util = "0.3"
time = { version = "0.3", features = ["serde"] }
zstd = "0.13"
sha2 = "0.10"
moka = { version = "0.12", features = ["future"] }
hex = "0.4"
rust_decimal = "1"
tracing = "0.1"
