[package]
name = "hiero-did-core"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
description = "Core types, models, and utilities for did:hedera"
license = "Apache-2.0"
keywords = ["did", "hedera", "identity", "hcs"]
categories = ["cryptography", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
