[package]
name = "hiero-did-hcs"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
description = "Hedera Consensus Service client and topic helpers for did:hedera"
license = "Apache-2.0"
keywords = ["did", "hedera", "hcs", "sdk"]
categories = ["api-bindings", "cryptography"]

[dependencies]
hiero-did-client = { version = "0.1.0", path = "../client" }
hiero-did-core = { version = "0.1.0", path = "../core" }
hiero-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }
futures-util = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }
moka = { workspace = true }
hex = { workspace = true }
time = { workspace = true, features = ["serde"] }
base64 = { workspace = true }

[dev-dependencies]
dotenvy = "0.15"
serial_test = "3"
