[package]
name = "hiero-did-registrar"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
description = "High-level DID creation flow for did:hedera on Hedera"
license = "Apache-2.0"
keywords = ["did", "hedera", "registrar", "hcs"]
categories = ["cryptography", "api-bindings"]

[dependencies]
hiero-did-core = { version = "0.1.0", path = "../core" }
hiero-did-messages = { version = "0.1.0", path = "../messages" }
hiero-did-hcs = { version = "0.1.0", path = "../hcs" }
hiero-did-signer = { version = "0.1.0", path = "../signer" }
hiero-sdk = { workspace = true }
hiero-did-lifecycle = { version = "0.1.0", path = "../lifecycle" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde.workspace = true
sha2 = { workspace = true }
hex = { workspace = true }
tracing = {workspace = true}

[dev-dependencies]
dotenvy = "0.15.7"
hiero-did-client = { version = "0.1.0", path = "../client" }
hiero-did-resolver = { version = "0.1.0", path = "../resolver" }
reqwest = { workspace = true }
serde_json = { workspace = true }

# registrar/Cargo.toml
[features]
debug-mirror = []
