[package]
name = "hiero-did-resolver"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
description = "Mirror-node DID resolution and document reconstruction for did:hedera"
license = "Apache-2.0"
keywords = ["did", "hedera", "resolver", "mirror-node"]
categories = ["cryptography", "web-programming::http-client"]

[dependencies]
hiero-sdk = { workspace = true }
hiero-did-core = { version = "0.1.0", path = "../core" }
hiero-did-messages = { version = "0.1.0", path = "../messages" }
hiero-did-hcs = { version = "0.1.0", path = "../hcs" }
hiero-did-signer = { version = "0.1.0", path = "../signer" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
ciborium = "0.2"
async-trait = "0.1"

[dev-dependencies]
dotenvy = "0.15.7"
