[package]
name = "hiero-did-sdk"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for did:hedera — create, resolve, and manage Hedera DIDs"
license = "Apache-2.0"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
readme = "../README.md"

[dependencies]
hiero-did-anoncreds = { path = "../anoncreds" }
hiero-did-client = { path = "../client" }
hiero-did-core = { path = "../core" }
hiero-did-hcs = { path = "../hcs" }
hiero-did-method = { path = "../method" }
hiero-did-messages = { path = "../messages" }
hiero-did-registrar = { path = "../registrar" }
hiero-did-resolver = { path = "../resolver" }
hiero-did-signer = { path = "../signer" }

[dev-dependencies]
dotenvy = "0.15.7"
hiero-sdk = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
