[package]
name = "hiero-did-signer"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/Jashk120/hiero-did-sdk-rs"
description = "Ed25519 signing and verification helpers for did:hedera"
license = "Apache-2.0"
keywords = ["did", "hedera", "ed25519", "signature"]
categories = ["cryptography"]

[dependencies]
hiero-did-core = { version = "0.1.0", path = "../core" }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["blocking"], optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
vault = ["dep:reqwest", "dep:serde", "dep:serde_json", "dep:base64"]
